Fix Solution box rendering on Firefox
Firefox is the only modern browser not to support `zoom` (https://developer.mozilla.org/en-US/docs/Web/CSS/zoom), so we'll hack around it by using a scale transform + margins.

--- a/css/main-section.css
+++ b/css/main-section.css
@@ -227,10 +227,12 @@
 
 .box.solution #solution {
   display: inline-block;
-  zoom: 34%;
   position: absolute;
   right: 45px;
   top: 22px;
+  /* Next two lines are equivalent to `zoom: 34%;` which FF doesn't support. */
+  transform: scale(0.34);
+  margin: -129px -136px;
 }
 
 .box.solution #solution .coin {
